# ctfd-vol1

./: .gitignore  CMakeLists.txt  README.md  taylor.ipynb
chapter_03/: CMakeLists.txt  diff  diff.c  prob3.1.ipynb  prob3.2.ipynb  prob3.3.ipynb  prob3.4.ipynb  prob3.5.ipynb  prob3.7.c  prob3.8.c  prob3.8.ipynb
chapter_04/: prob4.1.c  prob4.1.out  prob4.2.c  prob4.2.out  prob4.3.ipynb
chapter_05/: .gitignore  FIVOL.for
gsl_examples/: CMakeLists.txt
